5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1593_2425.log
== SUBMITION (2019-03-26 10:44:44) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

print(round(eq, 3))


-- EXECUTION TIME:
0.156352
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:44:45) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

print(round(eq, 3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:06) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

from math import

print(round(eq, 3"km/l"))



-- ERROR:
File "XXXX", line 6
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:13:08) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

from math import

print(round(eq, 3"km/l"))



-- EXECUTION TIME:
0.156165
-- ERROR:
  File "/home/codebench/codes/1593/2425/main.py", line 6
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:13:10) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

from math import*

print(round(eq, 3"km/l"))



-- ERROR:
File "XXXX", line 8
    print(round(eq, 3"km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:14:35) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

c = ("km/l")
d = (round(eq, 3))

print(d, c)



-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:14:42) 
-- CODE:
x = float(input("Qual a distancia total percorrida ?"))
y = float(input("Quantos litros de combustivel foram gastos ?"))

eq = (x/y)

c = ("km/l")
d = (round(eq, 3))

print(d, c)



-- EXECUTION TIME:
0.155837
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
